# FPGAEmuWeb

./: .dockerignore  .gitignore  .gitlab-ci.yml  DEmul.py  Dockerfile  DockerfileFromHub  DockerfileFromPython  DockerfileOpiServer  DockerfileRaspberryPi  INSTALL  README.md  appp.py  celerybash  crontask  dbchangepass.py  dbget.py  dbsend.py  docker-compose-opiserver.yml  docker-compose.yml  entrypoint.sh  mainold.py  nginx.conf  nginxdefault.conf  pyproject.toml  requirements.txt  seckeyb  start.py  supervisord.conf
backend/: analyze.sh  compilebackend.sh  fpgacompileweb  fpgacompileweb.sh  fpgacompileweb3.sh  fpgaemu.c  ghwgetsignals.sh  ghwhierarchy.sh  simulate.sh  work-obj93.cf
bulmasetup/: Readme.MD  package.json
bulmasetup/sass/: mystyles.scss
examples/: usertop_2.vhd
fpgaemubase/: BuildFPGAEmuBase.sh  CompileGHDL.sh  Dockerfile  Dockerfile_CompileGHDL
main/: __init__.py  adminbp.py  authbp.py  events.py  funcs.py  models.py  projectexporter.py  routes.py  tasks.py
migrations/versions/: a58afc2a6fd8_trying.py  b7e7b56ec514_top_level_entity_and_test_entity_added_.py
static/: emulation2.html  sevenSegMod.js
static/css/: mystyles.css
templates/: about.html  admin.html  base.html  editor.html  emul1 - Copia.html  emul1.html  emul2.html  emulation.html  emulation_.html  files.html  help.html  login.html  login2.html  main1.html  mapper.html  plottest.html  profile.html  sendfiles.html  sendfiles_old.html  signup.html  signup2.html  simulation.html  userlist.html
work/1234/: fpgatest  fpgatest.aux  usertop.vhd  work-obj93.cf  xorr.vhd
