[project]
name = "fpgaemuweb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery[redis]>=5.5.3",
    "flask==2.2.2",
    "flask-login>=0.6.3",
    "flask-socketio==5.3.2",
    "flask-sqlalchemy>=3.0.3",
    "gevent>=25.8.2",
    "gevent-websocket>=0.10.1",
    "gunicorn>=23.0.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "werkzeug==2.2.2",
    "yagmail>=0.15.293",
]
